clusters/my-cluster/traefik-helm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: error-pages
  namespace: default
  labels:
    app: error-pages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: error-pages
  template:
    metadata:
      labels:
        app: error-pages
    spec:
      containers:
        - name: error-server
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html
      volumes:
        - name: html
          configMap:
            name: error-pages-html
---
apiVersion: v1
kind: Service
metadata:
  name: error-pages-service
  namespace: default
spec:
  selector:
    app: error-pages
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wildcard-catchall
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      priority: 1
      services:
        - name: error-pages-service
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: "swages.net"
        sans:
          - "*.swages.net"
          - "*.swages.cloud"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages-middleware
  namespace: default
spec:
  errors:
    status:
      - "404"
    service:
      name: error-pages-service
      port: 80
    query: "/index.html"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catchall-error-router
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`^.+\.swages\.(net|cloud)$`)
      kind: Rule
      priority: 1
      services:
        - name: error-pages-service
          port: 80
      middlewares:
        - name: error-pages-middleware
  tls:
    certResolver: letsencrypt
    domains:
      - main: swages.net
        sans:
          - "*.swages.net"
          - "*.swages.cloud"
